--- a/subscription/templates/subscription/payment.html
+++ b/subscription/templates/subscription/payment.html
@@ -9,17 +9,32 @@
 {% endblock head_js %}
 
 {% block content %}
-<form action="{% url 'subscription:pay_subscription' subscription_type.id %}" method="post" id="payment-form">
-    {% csrf_token %}
-    <div class="form-group">
-        <label for="card-element">
-            Credit or debit card
-        </label>
-        <div class="form-control" id="card-element"></div>
-        <div id="card-errors" role="alert"></div>
+<div class="row mt-4">
+    <div class="col text-center">
+        <h1>{{ subscription_type.name }} Payment</h1>
     </div>
-    <button type="submit" class="btn btn-warning">Pay €{{ subscription_type.price }}</button>
-</form>
+</div>
+
+<div class="row mt-4 justify-content-center">
+    <div class="col-lg-6">
+        <form action="{% url 'subscription:pay_subscription' subscription_type.id %}" method="post" id="payment-form">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="card-element">
+                    Credit or debit card
+                </label>
+                <div class="form-control" id="card-element"></div>
+                <div id="card-errors" role="alert"></div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col">
+                    <button type="submit" class="btn btn-warning">Pay &euro;{{ subscription_type.price }}</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 
 <script>
 $(function () {
