--- a/subscription/templates/subscription/subscriptions.html
+++ b/subscription/templates/subscription/subscriptions.html
@@ -3,21 +3,27 @@
 {% block page_title %}Choose Subscription{% endblock page_title %}
 
 {% block content %}
-
-<h1>Subscriptions</h1>
-
-{% for subscription_type in subscription_types %}
-<div class="card" style="width: 18rem;">
-    <img src="" class="card-img-top" alt="">
-    <div class="card-body">
-        <h5 class="card-title">{{ subscription_type.name }}</h5>
-        <p class="card-text">
-            €{{ subscription_type.price }}<br>
-            {{ subscription_type.description }}
-        </p>
-        <a href="{% url 'subscription:pay_subscription' subscription_type.id %}" class="btn btn-primary">Sign Up</a>
+<div class="row mt-4">
+    <div class="col text-center">
+        <h1>Subscription Plans</h1>
     </div>
 </div>
-{% endfor %}
-
+<div class="row mt-4">
+    {% for subscription_type in subscription_types %}
+    <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4">
+        <div class="card h-100 text-center">
+            <div class="card-body">
+                <h5 class="card-title">{{ subscription_type.name }}</h5>
+                <p class="card-text">
+                    <h6>&euro;{{ subscription_type.price }}</h6>
+                    {{ subscription_type.description }}
+                </p>            
+            </div>
+            <div class="card-footer">
+                <a href="{% url 'subscription:pay_subscription' subscription_type.id %}" class="custom-btn">Sign Up</a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
