--- a/barchart/templates/barchart/upload.html
+++ b/barchart/templates/barchart/upload.html
@@ -5,27 +5,39 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h1>Upload Data</h1>
-<form method="post" action="{% url 'barchart:upload_chart' %}">
-    {% csrf_token %}
-
-    <div class="form-group row">
-        <div class="col-12">
-            {{ upload_data_form.chart_title|as_crispy_field }}
-        </div>
+<div class="row mt-4">
+    <div class="col text-center">
+        <h1>Upload Data</h1>
     </div>
-    <div class="form-group row">
-        <div class="col-6">
-            {{ upload_data_form.x_data|as_crispy_field }}
-        </div>
-        <div class="col-6">
-            {{ upload_data_form.y_data|as_crispy_field }}
-        </div>
+</div>
+<div class="row mt-4">
+    <div class="col">
+        <form method="post" action="{% url 'barchart:upload_chart' %}">
+            {% csrf_token %}
+            <div class="form-group row">
+                <div class="col-12">
+                    {{ upload_data_form.chart_title|as_crispy_field }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    {{ upload_data_form|as_crispy_errors }}
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-6">
+                    {{ upload_data_form.x_data|as_crispy_field }}
+                </div>
+                <div class="col-6">
+                    {{ upload_data_form.y_data|as_crispy_field }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button type="submit" class="custom-btn">Upload</button>
+                </div>
+            </div>            
+        </form>
     </div>
-    <div class="row">
-        <div class="col">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-    </div>
-</form>
+</div>
 {% endblock %}
