--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -3,8 +3,15 @@
 {% block page_title %}Email Sent{% endblock page_title %}
 
 {% block content %}
-<h1>Email Sent</h1>
-<p>Check your Inbox</p>
-<p>We've e-mailed you instructions for setting your password to the e-mail address you submitted.</p>
-<p>You should be receiving it shortly.</p>
+<div class="row mt-4">
+    <div class="col">
+        <h1>Check your Inbox</h1>
+    </div>
+</div>
+<div class="row mt-4">
+    <div class="col">
+        <p>We have sent instructions for setting your password to the e-mail address submitted.</p>
+        <p>You should receive it shortly.</p>
+    </div>
+</div>
 {% endblock %}
