--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -5,21 +5,29 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h1>Register</h1>
-<form method="post" action="{% url 'accounts:register' %}">
-    {% csrf_token %}
+<div class="row mt-4">
+    <div class="col">
+        <h1>Register</h1>
+    </div>
+</div>
+<div class="row mt-4">
+    <div class="col">
+        <form method="post" action="{% url 'accounts:register' %}">
+            {% csrf_token %}
 
-    <div class="row">
-        <div class="col">
-            <p>If you already have an account, you can <a href="{% url 'accounts:login' %}">login</a></p>
-            {{ registration_form | crispy }}
-        </div>
+            <div class="row">
+                <div class="col">
+                    <p>If you already have an account, you can <a href="{% url 'accounts:login' %}">login</a></p>
+                    {{ registration_form | crispy }}
+                </div>
+            </div>
+        
+            <div class="form-group row">
+                <div class="col">
+                    <button type="submit" class="custom-btn">Register</button>
+                </div>
+            </div>
+        </form>
     </div>
- 
-    <div class="form-group row">
-        <div class="col">
-            <button type="submit" class="btn btn-primary">Register</button>
-        </div>
-    </div>
-</form>
+</div>
 {% endblock %}
