--- a/search/templates/search/confirmdelete.html
+++ b/search/templates/search/confirmdelete.html
@@ -3,12 +3,29 @@
 {% block page_title %}Confirm Delete{% endblock page_title %}
 
 {% block content %}
-
-    <p>Confirm Delete</p>
-    <form method="post" action="{% url 'search:delete_chart' chart.id %}">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-warning">Confirm</button>
-        <a href="{% url 'search:all_charts' %}" class="btn btn-primary">Cancel</a>
-    </form>
-    
+<div class="row mt-4">
+    <div class="col text-center">
+        <h1>Confirm Delete</h1>
+    </div>
+</div>
+<div class="row mt-4">
+    <div class="col">
+        <form method="post" action="{% url 'search:delete_chart' chart.id %}">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col text-center">
+                    <p>Are you sure you want to delete "{{ chart.title }}"?</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 text-right">
+                    <button type="submit" class="btn btn-warning">Confirm</button>
+                </div>
+                <div class="col-6 text-left">
+                    <a href="{% url 'search:all_charts' %}" class="custom-btn">Cancel</a>
+                </div>
+            </div>            
+        </form>
+    </div>
+</div>
 {% endblock %}
