--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -63,6 +63,13 @@ body {
     text-decoration: none;
 }
 
+.custom-btn.custom-btn-sm {
+    padding: .25rem .5rem;
+    font-size: .875rem;
+    line-height: 1.5;
+    border-radius: .2rem;
+}
+
 /* Profile page */
 .personal-info-item .key {
     display: inline-block;
@@ -80,4 +87,9 @@ body {
 
 .personal-info-item p {
     margin: 0;
+}
+
+/* Style tables */
+.table td, .table th {
+    vertical-align: middle;
 }
