--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -3,7 +3,15 @@
 {% block page_title %}Password Changed{% endblock page_title %}
 
 {% block content %}
-<h1>Password Changed</h1>
-<p>Your password has been set. You may go ahead and log in now.</p>
-<a href="{{ login_url }}" class="btn btn-primary">Log in</a>
+<div class="row mt-4">
+    <div class="col">
+        <h1>Password Changed</h1>
+    </div>
+</div>
+<div class="row mt-4">
+    <div class="col">
+        <p>Your password has been set. You may go ahead and login now.</p>
+        <a href="{{ login_url }}" class="custom-btn">Login</a>
+    </div>
+</div>
 {% endblock %}
