--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -6,26 +6,43 @@
 
 {% block content %}
 {% if validlink %}
-<h1>Change Password</h1>
-<form method="post">
-    {% csrf_token %}
+<div class="row mt-4">
+    <div class="col">
+        <h1>Change Password</h1>
+    </div>
+</div>
+<div class="row mt-4">
+    <div class="col">
+        <form method="post">
+            {% csrf_token %}
+        
+            <div class="row">
+                <div class="col">
+                    <p>Please enter your new password twice.</p>
+                    {{ form | crispy }}
+                </div>
+            </div>
+            
+            <div class="form-group row">
+                <div class="col">
+                    <button type="submit" class="custom-btn">Change my password</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 
-    <div class="row">
-        <div class="col">
-            <p>Please enter your new password twice.</p>
-            {{ form | crispy }}
-        </div>
-    </div>
-    
-    <div class="form-group row">
-        <div class="col">
-            <button type="submit" class="btn btn-primary">Change my password</button>
-        </div>
-    </div>
-</form>
 {% else %}
-<h1>Password Reset Unsuccessful</h1>
-<p>The password reset link was invalid, possibly because it has already been used.</p>
-<p>Please request a new password reset.</p>
+<div class="row mt-4">
+    <div class="col">
+        <h1>Password Reset Unsuccessful</h1>
+    </div>
+</div>
+<div class="row mt-4">
+    <div class="col">
+        <p>The password reset link was invalid, possibly because it has already been used.</p>
+        <p>Please request a new password reset.</p>
+    </div>
+</div>
 {% endif %}
 {% endblock %}
