--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,21 +5,29 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h1>Request Password Reset Email</h1>
-<form method="post">
-    {% csrf_token %}
-    
-    <div class="row">
-        <div class="col">
-            <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
-            {{ form | crispy }}
-        </div>
+<div class="row mt-4">
+    <div class="col">
+        <h1>Reset Password</h1>
     </div>
+</div>
+<div class="row mt-4">
+    <div class="col">
+        <form method="post">
+            {% csrf_token %}
+            
+            <div class="row">
+                <div class="col">
+                    <p>Enter your email address below, and we will send instructions for setting a new password.</p>
+                    {{ form | crispy }}
+                </div>
+            </div>
 
-    <div class="form-group row">
-        <div class="col">
-            <button type="submit" class="btn btn-primary">Send me instructions!</button>
-        </div>
+            <div class="form-group row">
+                <div class="col">
+                    <button type="submit" class="custom-btn">Send me instructions!</button>
+                </div>
+            </div>
+        </form>
     </div>
-</form>
+</div>
 {% endblock %}
