--- a/barchart/templates/barchart/chart.html
+++ b/barchart/templates/barchart/chart.html
@@ -8,65 +8,44 @@
 {% endblock head_js %}
 
 {% block content %}
-<p>Bar Chart</p>
-<p>{{ chart_data }}</p>
+<div class="row mt-4">
+  <div class="col text-center">
+      <h1>Bar Chart</h1>
+  </div>
+</div>
 
 <div id="draw-here"></div>
 
-<form action="{% url 'search:save_chart' %}" method="post">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-primary">Save Chart</button>
-</form>
+<div class="row mt-4">
+  <div class="col text-center">
+    <form action="{% url 'search:save_chart' %}" method="post">
+      {% csrf_token %}
+      <button type="submit" class="custom-btn">Save Chart</button>
+    </form>
+  </div>
+</div>
+
+<div class="table-responsive mt-4">
+  <table class="table chart-data-table">
+    <thead class="thead-dark">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">X Data</th>
+            <th scope="col">Y Data</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for row in chart_data %}
+        <tr>
+            <th scope="row">{{ forloop.counter }}</th>
+            <td>{{ row.x_data }}</td>
+            <td>{{ row.y_data }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+  </table>
+</div>
 
 {{ chart_data|json_script:"bar_data" }}
-<script>
-    // set the dimensions and margins of the graph
-    var margin = { top: 30, right: 30, bottom: 70, left: 60 },
-      width = 460 - margin.left - margin.right,
-      height = 400 - margin.top - margin.bottom;
-
-    // append the svg object to the body of the page
-    var svg = d3.select("#draw-here")
-      .append("svg")
-      .attr("width", width + margin.left + margin.right)
-      .attr("height", height + margin.top + margin.bottom)
-      .append("g")
-      .attr("transform",
-        "translate(" + margin.left + "," + margin.top + ")");
-
-    // Parse the Data
-    let data = JSON.parse(document.getElementById('bar_data').textContent);;
-
-    console.log(data)
-    // X axis
-    var x = d3.scaleBand()
-      .range([0, width])
-      .domain(data.map(function (d) { return d.x_data; }))
-      .padding(0.2);
-    svg.append("g")
-      .attr("transform", "translate(0," + height + ")")
-      .call(d3.axisBottom(x))
-      .selectAll("text")
-      .attr("transform", "translate(-10,0)rotate(-45)")
-      .style("text-anchor", "end");
-
-    // Add Y axis
-    var y = d3.scaleLinear()
-      .domain([0, 10])
-      .range([height, 0]);
-    svg.append("g")
-      .call(d3.axisLeft(y));
-
-    // Bars
-    svg.selectAll("mybar")
-      .data(data)
-      .enter()
-      .append("rect")
-      .attr("x", function (d) { return x(d.x_data); })
-      .attr("y", function (d) { return y(d.y_data); })
-      .attr("width", x.bandwidth())
-      .attr("height", function (d) { return height - y(d.y_data); })
-      .attr("fill", "#69b3a2");
-
-</script>
+<script type="text/javascript" src="{% static 'js/barchart.js' %}"></script>
 {% endblock %}
