--- a/barchart/templates/barchart/chart.html
+++ b/barchart/templates/barchart/chart.html
@@ -5,6 +5,8 @@
 {% block head_js %}
 {% load static %}
 <script type="text/javascript" src="{% static 'js/d3.v5.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/canvas-toBlob.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/FileSaver.min.js' %}"></script>
 {% endblock head_js %}
 
 {% block content %}
@@ -14,14 +16,21 @@
   </div>
 </div>
 
-<div id="draw-here"></div>
+<div class="row mt-4 justify-content-center">
+  <div class="col-12 col-lg-8">
+    <div id="draw-here"></div>
+  </div>
+</div>
 
 <div class="row mt-4">
-  <div class="col text-center">
+  <div class="col-12 col-sm-6 text-center text-sm-right mb-2 mb-sm-0">
     <form action="{% url 'search:save_chart' %}" method="post">
       {% csrf_token %}
       <button type="submit" class="custom-btn">Save Chart</button>
     </form>
+  </div>
+  <div class="col-12 col-sm-6 text-center text-sm-left">
+    <button id="downloadImageButton" class="custom-btn">Download Image</button>
   </div>
 </div>
 
@@ -48,4 +57,5 @@
 
 {{ chart_data|json_script:"bar_data" }}
 <script type="text/javascript" src="{% static 'js/barchart.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/downloadimage.js' %}"></script>
 {% endblock %}
