Added chart subtitle and dynamic margins on barchart

--- a/barchart/templates/barchart/chart.html
+++ b/barchart/templates/barchart/chart.html
@@ -17,7 +17,9 @@
 </div>
 
 <div class="row mt-4 justify-content-center">
-  <div class="col-12 col-lg-8">
+  <div id="chart-container" class="col-12 col-lg-8">
+    <div id="chart-title">{{ chart_title }}</div>
+    <div id="chart-subtitle">{{ chart_subtitle }}</div>
     <div id="draw-here"></div>
   </div>
 </div>
