--- a/barchart/templates/barchart/upload.html
+++ b/barchart/templates/barchart/upload.html
@@ -19,6 +19,11 @@
                     {{ upload_data_form.chart_title|as_crispy_field }}
                 </div>
             </div>
+            <div class="form-group row">
+                <div class="col-12">
+                    {{ upload_data_form.chart_subtitle|as_crispy_field }}
+                </div>
+            </div>
             <div class="row">
                 <div class="col-12">
                     {{ upload_data_form|as_crispy_errors }}
