Added date format field to line chart upload

--- a/barchart/templates/barchart/upload.html
+++ b/barchart/templates/barchart/upload.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="row mt-4">
     <div class="col text-center">
-        <h1>Upload Data</h1>
+        <h1>Upload Bar Chart Data</h1>
     </div>
 </div>
 <div class="row mt-4">
