--- a/linechart/templates/linechart/upload.html
+++ b/linechart/templates/linechart/upload.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="row mt-4">
     <div class="col text-center">
-        <h1>Upload Data</h1>
+        <h1>Upload Line Chart Data</h1>
     </div>
 </div>
 <div class="row mt-4">
@@ -22,6 +22,11 @@
             <div class="form-group row">
                 <div class="col-12">
                     {{ upload_data_form.chart_subtitle|as_crispy_field }}
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-12 col-md-6">
+                    {{ upload_data_form.date_format|as_crispy_field }}
                 </div>
             </div>
             <div class="row">
