--- a/home/templates/home/createchart.html
+++ b/home/templates/home/createchart.html
@@ -13,7 +13,7 @@
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
         <div class="card h-100 text-center">
             <div class="card-body">
-                <h5 class="card-title">Bar Chart <span class="badge badge-success">Free</span></h5>
+                <h3 class="card-title">Bar Chart <span class="badge badge-success">Free</span></h3>
                 <p class="card-text">Compare values across discrete categories.</p>            
             </div>
             <div class="card-footer">
@@ -25,8 +25,8 @@
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
         <div class="card h-100 text-center">
             <div class="card-body">
-                <h5 class="card-title">Line Chart <span class="badge badge-warning">Paid</span></h5>
-                <p class="card-text">Shows trends over time.</p>         
+                <h3 class="card-title">Line Chart <span class="badge badge-warning">Paid</span></h3>
+                <p class="card-text">Show trends over time.</p>         
             </div>
             <div class="card-footer">
                 <a href="{% url 'linechart:upload_chart' %}" class="custom-btn">Select</a>
