--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     {% block head_js %}
     {% endblock head_js %}
 </head>
-<body>
+<body style="background: url('{% static 'img/grey_background.png' %}') repeat;">
     <!-- nav bar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top custom-nav-border custom-nav-bg">
 
