--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block page_title %}Dashing Data{% endblock page_title %}
 
 {% block content %}
 <!-- Jumbotron -->
-<section id="jumbotron-section" class="jumbotron jumbotron-fluid">
+<section id="jumbotron-section" class="jumbotron jumbotron-fluid"
+    style="background: url('{% static 'img/yellow_background.png' %}') repeat;">
     <div class="container text-center">
         <h1>Welcome to Dashing Data.</h1>
         <p class="lead">Start creating visually engaging charts online.</p>
