--- a/linechart/templates/linechart/upload.html
+++ b/linechart/templates/linechart/upload.html
@@ -35,6 +35,9 @@
                 </div>
             </div>
             <div class="form-group row">
+                <div class="col-12">
+                    <p>Enter each data point on a new line.</p>
+                </div>
                 <div class="col-6">
                     {{ upload_data_form.x_data|as_crispy_field }}
                 </div>
