Added some spacing under the buttons

--- a/linechart/templates/linechart/upload.html
+++ b/linechart/templates/linechart/upload.html
@@ -45,7 +45,7 @@
                     {{ upload_data_form.y_data|as_crispy_field }}
                 </div>
             </div>
-            <div class="row">
+            <div class="row mb-4">
                 <div class="col">
                     <button type="submit" class="custom-btn">Upload</button>
                 </div>
