--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
 
-            <div class="form-group row">
+            <div class="form-group row mb-4">
                 <div class="col">
                     <button type="submit" class="custom-btn">Login</button>
                 </div>
