--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
         
-            <div class="form-group row">
+            <div class="form-group row mb-4">
                 <div class="col">
                     <button type="submit" class="custom-btn">Register</button>
                 </div>
