--- a/barchart/templates/barchart/upload.html
+++ b/barchart/templates/barchart/upload.html
@@ -40,7 +40,7 @@
                     {{ upload_data_form.y_data|as_crispy_field }}
                 </div>
             </div>
-            <div class="row">
+            <div class="row mb-4">
                 <div class="col">
                     <button type="submit" class="custom-btn">Upload</button>
                 </div>
